--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,21 @@
-.App {
+.content {
     background-image: url("assets/day.jpg");
     background-size: cover;
-    background-position-x: right;
-    
-    
-}
-
-.content {
+    background-position: right bottom;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+}
+
+.content--error {
+    color: white;
+    text-shadow: -1px 3px 4px rgba(0,0,0,0.9);
+    font-size: 35px;
+    box-sizing: border-box;
+    padding: 15px;
+    text-align: center;
 }
 
 .content__section {
@@ -24,6 +28,11 @@
     color: black;
     width: 100%;
     justify-content: space-evenly;
+    font-size: 24px;
+}
+
+.conditions-icon {
+    padding-right: 5px;
 }
 
 .content__section__right-col {
@@ -35,4 +44,161 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.content__section.content__section--location{
+    font-size: 26px;
+}
+
+.description {
+    text-transform: capitalize;
+    font-size: 26px;
+    color: white;
+    text-shadow: -1px 3px 4px rgba(0,0,0,0.9);
+    text-align: center;
+}
+
+@media screen and (min-width: 481px) {
+    .App {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+    }
+    
+    .content {
+        height: 640px;
+        width: 360px;
+        border-radius: 25px;
+        box-shadow: -12px 5px 19px 2px rgba(0,0,0,0.75);
+    }
+}
+
+/*************LOADER***************/
+
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+/*
+Light Blue 007db7
+Blue 170073
+Blue 162cff
+Pink ff1684
+Saumon f85a5a
+Yellow ebfc5c
+Yellow dcfa51
+*/
+
+/* body
+{
+  font-family: 'Open Sans';
+  color: #EB8C79;
+  background-color: #18506F;
+} */
+
+.container
+{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.banner
+{
+  position: relative;
+  padding: 10px 20px;
+  animation: loader 1s cubic-bezier(0.5, 0.1, 0.15, 1) alternate infinite;
+}
+
+@keyframes loader
+{
+  0%
+  {
+    letter-spacing: -1px;
+  }
+  100%
+  {
+    letter-spacing: 15px;
+  }
+}
+
+.banner::before
+{
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  transform: skewX(-15deg);
+  background-color: #eee;
+}
+
+.banner-left, .banner-right
+{
+  width: 60px;
+  height: 100%;
+  position: absolute;
+  z-index: -2;
+  bottom: -30%;
+  transform: skewX(-15deg);
+  background-color: #ccc;
+}
+
+.banner-left
+{
+  animation: sub-banner-left 1s cubic-bezier(0.5, 0.1, 0.15, 1) alternate infinite;
+}
+
+@keyframes sub-banner-left
+{
+  0%
+  {
+    right: 82%;
+  }
+  100%
+  {
+    right: 90%;
+  }
+}
+
+.banner-right
+{
+  animation: sub-banner-right 1s cubic-bezier(0.5, 0.1, 0.15, 1) alternate infinite;
+}
+
+@keyframes sub-banner-right
+{
+  0%
+  {
+    left: 82%;
+  }
+  100%
+  {
+    left: 90%;
+  }
+}
+
+.banner-left::before, .banner-right::before
+{
+  content: '';
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: -1px;
+  border: 22px solid;
+  border-color: transparent;
+}
+
+.banner-left::before
+{
+  left: -1px;
+  border-left-color: #18506F;
+}
+
+.banner-right::before
+{
+  right: -1px;
+  border-right-color: #18506F;
 }
