--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,20 @@
 .content {
-    background-image: url("assets/day.jpg");
     background-size: cover;
-    background-position: right bottom;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+}
+
+.content--day {
+    background-image: url("assets/day.jpg");
+    background-position: right bottom;
+}
+
+.content--night {
+    background-image: url("assets/night.jpg");
+    background-position: left bottom;
 }
 
 .content--error {
@@ -29,6 +37,7 @@
     width: 100%;
     justify-content: space-evenly;
     font-size: 24px;
+    text-shadow: none;
 }
 
 .conditions-icon {
